--- a/style.css
+++ b/style.css
@@ -124,10 +124,9 @@ body {
      margin-bottom: 50px;
 }
 .menu_burger{
-     display: inline-block;
-     text-align: left;
-     width: 305px;
-     margin: 27px 0px;
+     float: left;
+     padding-top: 30px;
+     padding-bottom: 30px;
 }
 /*меню бургер*/
 div.line{
@@ -140,23 +139,18 @@ div.line{
 }
 .menu_li{
      color: #000000;
-     display: inline-block;
-     text-align: center;
      font-size: 12px;
      text-transform: uppercase;
-     font-weight: 400;
-     width: 585px;
-     margin: 27px 0px;
+     text-align: center;
 }
 .blok_li{
      display: inline-block;
      padding:30px 0px;
 }
 .search{
-     display: inline-block;
-     text-align: right;
-     width: 250px;
-     margin: 27px 0px;
+     float: right;
+     padding: 30px 0;
+     border: none;
 }
 /*main*/
 .box{
@@ -250,12 +244,10 @@ dd.blue{
      font-weight: 700;
 }
 /*очищаем после Float */
-.clearfix:after{
-     content:".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     height: 0;
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 /*выбор товара(цвет,размер,количество)*/
 label.topp{
@@ -265,22 +257,50 @@ label.topp{
      font-weight: 700;
 }
 input.clear{
-     color: #111111;
+     margin-top: 41px;
+     color:#000000;
      font-size: 12px;
+     text-transform: uppercase;
+     border: none;
+     display: block;
+     border-bottom:  1px solid #bababa;
+     background-color: #ffffff;
 }
-button.bg-CART{
+button.blackbox{
      background: #111111;
      color: #ffffff;
      border: 1px solid #000000;
      font-size: 12px;
      font-weight: 700;
+     padding: 23px 65px;
+     margin: 59px 20px 70px 0;
+     width: 215px;
+     height: 55px;
 }
-button.color-border{
+button.whitebox{
      background: #ffffff;
-     font-size: 12px;
      color: #111111;
      border: 1px solid #e1e1e1;
+     font-size: 12px;
      font-weight: 700;
+     padding: 20px 50px;
+     margin: 59px 0px 70px 0;
+     width: 225px;
+     height: 55px;
+}
+.social{
+     text-transform: uppercase;
+     text-align: left;
+     border-top:1px solid #e1e1e1;
+     border-bottom:1px solid #e1e1e1;
+     padding: 23px 0;
+}
+.icon{
+     display: inline;
+     margin: 22px 4px 0px;
+}
+.w{
+     margin: 0px 64px 0px 0px;
 }
 footer.border{
      background: #ffffff;
